# ai-experts-scanner

./: .gitignore  README.md  pyproject.toml
notebooks/: ai_experts_scanner_results.xlsx  lab.ipynb
src/ai-experts-scanner/ai_experts_scanner/: scanner.py
src/ai-experts-scanner/ai_experts_scanner/data/: schema.py
src/ai-experts-scanner/ai_experts_scanner/search/: tools.py
